--- a/Project Notes/2019 DSC3 Phase transition in the Ising model.ipynb
+++ b/Project Notes/2019 DSC3 Phase transition in the Ising model.ipynb
@@ -10,9 +10,7 @@
     "\n",
     "**Author:** João António - joaoantant@gmail.com \\& github.com/JoaoAnt/.\n",
     "\n",
-    "**Based on:** the instructions for Project 4 from professor Alexander V. Goltsev.\n",
-    "\n",
-    "**The ipybn can be found in:** the Github in the WaddlePortfolio/Projects."
+    "**Based on:** the instructions for Project 4 from professor Alexander V. Goltsev."
    ]
   },
   {
